--- a/Day 1/Day 1 - Notebook 0 2-4-20.ipynb
+++ b/Day 1/Day 1 - Notebook 0 2-4-20.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -527,6 +527,7 @@
      "output_type": "stream",
      "text": [
       "[1.0, 3.0, 5.0, 4.0, 2.0]\n",
+      "This is pi\n",
       "3.0\n"
      ]
     },
@@ -537,7 +538,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-5107d8fe5b39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Index element doesnt exist in list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m## you should get an error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-aba57e72928a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Index element doesnt exist in list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m## you should get an error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -545,7 +546,13 @@
    "source": [
     "float_list = [1., 3., 5., 4., 2.]\n",
     "\n",
+    "# variable identifiers: unicode and _ is allowed\n",
+    "\n",
     "print(float_list)\n",
+    "\n",
+    "π = \"This is pi\"\n",
+    "\n",
+    "print(π)\n",
     "\n",
     "# selecting the second element in the list --> index = 1\n",
     "print(float_list[1])\n",
@@ -590,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -607,6 +614,8 @@
    ],
    "source": [
     "# Example: \n",
+    "float_list = [1., 3., 5., 4., 2.]\n",
+    "\n",
     "print(float_list[1:5])\n",
     "print(float_list[0:2])\n",
     "\n",
@@ -620,12 +629,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apending and deleting values in a list"
+    "## Appending and deleting values in a list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +644,8 @@
       "['hello', 'welcome', 'to', 'python']\n",
       "['hello', 'welcome', 'to', 'python', 'sessions']\n",
       "['hello', 'welcome', 'to', 'python', 'sessions', '2020']\n",
-      "['Hey!', 'welcome', 'to', 'python', 'sessions', '2020']\n"
+      "['Hey!', 'welcome', 'to', 'python', 'sessions', '2020']\n",
+      "['hello', 'Hey!', 'welcome', 'to', 'python', 'sessions', '2020']\n"
      ]
     }
    ],
@@ -650,7 +660,10 @@
     "# changing an element value\n",
     "a[0] = \"Hey!\"\n",
     "print(a)\n",
-    "\n"
+    "\n",
+    "a = [\"hello\"] + a\n",
+    "\n",
+    "print(a)"
    ]
   },
   {
@@ -700,7 +713,7 @@
     "del(apple[2]) ## delete element based on its position in list\n",
     "print(apple)\n",
     "\n",
-    "apple.remove(\"ipad\") ## deleting elememt based on its value\n",
+    "apple.remove(\"ipad\") ## deleting element based on its value\n",
     "print(apple)\n",
     "\n",
     "apple.pop(1) ## another way to delete element based on its position in list\n",
@@ -724,7 +737,6 @@
    "source": [
     "# in and not in operator\n",
     "\n",
-    "\n",
     "apple = ['ipad', 'iphone', 'mac']\n",
     "print('ipad' in apple) ##will print True cuz ipad is in apple\n",
     "\n",
@@ -742,25 +754,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('apple', 'banana', 'cherry')\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-e74e2bbbcee2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#assignment is not allowed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mthistuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"orange\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m## Tuples are IMMUTABLE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+      "('apple', 'banana', 'cherry')\n",
+      "<class 'list'>\n",
+      "['apple', 'banana', 'cherry']\n"
      ]
     }
    ],
@@ -769,9 +772,13 @@
     "print(thistuple)\n",
     "\n",
     "#assignment is not allowed\n",
-    "thistuple[0]=\"orange\"\n",
+    "#thistuple[0]=\"orange\"\n",
     "\n",
-    "## Tuples are IMMUTABLE"
+    "## Tuples are IMMUTABLE\n",
+    "\n",
+    "x = list(thistuple)\n",
+    "print(type(x))\n",
+    "print(x)"
    ]
   },
   {
@@ -783,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -791,6 +798,7 @@
      "output_type": "stream",
      "text": [
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964}\n",
+      "{0: 'h', 1: 'e', 2: 'l', 3: 'l', 4: 'o'}\n",
       "Ford\n",
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 2020}\n"
      ]
@@ -803,8 +811,11 @@
     "  \"model\": \"Mustang\",\n",
     "  \"year\": 1964\n",
     "}\n",
-    "print(thisdict)\n",
     "\n",
+    "listedict = {0: \"h\", 1: \"e\", 2: \"l\", 3: \"l\", 4: \"o\"}\n",
+    "\n",
+    "print(thisdict)\n",
+    "print(listedict)\n",
     "#accessing values using keys\n",
     "print(thisdict[\"brand\"])\n",
     "\n",
@@ -815,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +834,8 @@
      "output_type": "stream",
      "text": [
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 2020, 'Transmission': 'automatic'}\n",
-      "{'name': 'allen', 'age': '20'}\n"
+      "{'name': 'allen', 'age': '20'}\n",
+      "allen\n"
      ]
     }
    ],
@@ -837,7 +849,9 @@
     "a = [\"name\",\"age\"]\n",
     "b = [\"allen\",\"20\"]\n",
     "c = dict(zip(a,b)) #its like you're zipping them together into one list, and then converting it into a dict\n",
-    "print(c)"
+    "print(c)\n",
+    "\n",
+    "print(c['name'])"
    ]
   },
   {
@@ -849,23 +863,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Chennai', 'Pune', 'Mumbai', 'SBC', 'Kolkata', 'Delhi'}\n",
       "True\n",
       "False\n",
-      "{'Mumbai', 'Delhi', 'Kolkata', 'Chennai'}\n",
-      "{'Mumbai', 'SBC', 'Pune', 'Delhi', 'Kolkata', 'Chennai'}\n"
+      "{'Chennai', 'Kolkata', 'Mumbai', 'Delhi'}\n",
+      "{'Chennai', 'Pune', 'Mumbai', 'SBC', 'Kolkata', 'Delhi'}\n"
      ]
     }
    ],
    "source": [
-    "Metros = set( [\"Delhi\", \"Chennai\", \"Mumbai\", \"Kolkata\"])\n",
+    "Metros = set([\"Delhi\", \"Chennai\", \"Mumbai\", \"Kolkata\"])\n",
     "bigCities = set([\"Delhi\", \"Chennai\", \"Mumbai\", \"Kolkata\", \"Pune\", \"SBC\"])\n",
+    "\n",
+    "print(bigCities)\n",
     "\n",
     "# subsets and supersets\n",
     "print(Metros.issubset(bigCities)) # will print True cuz all Metros are Big Cities\n",
@@ -880,28 +897,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is expecially useful when dealing with stuff where we need the unique elements, for e.g.:\n",
+    "This is especially useful when dealing with stuff where we need the unique elements, for e.g.:\n",
     "\n",
     "Q. Write a program to find all the common characters present in two strings, s1 and s2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n', 'i', 'l', 'o', 'e', ' ', 'u', 'd', 't'}\n"
+      "{'the', 'pole'}\n"
      ]
     }
    ],
    "source": [
-    "s1 = 'Why did the python programmer run into the pole?'\n",
-    "s2 = \"He couldn't C it\"\n",
-    "print(set(s1)&set(s2))"
+    "s1 = 'Why did the python programmer run into the pole ?'\n",
+    "s2 = \"He couldn't C the pole\"\n",
+    "print(set(s1.split(\" \")) & set(s2.split(\" \")))"
    ]
   },
   {
@@ -937,7 +954,7 @@
    "source": [
     "# 1) Without return Type with arguments\n",
     "\n",
-    "def add( a, b):\n",
+    "def add(a, b):\n",
     "    print( a + b )\n",
     "\n",
     "def sub( a, b):\n",
@@ -980,18 +997,21 @@
      "output_type": "stream",
      "text": [
       "15000.0\n",
-      "21000.0\n"
+      "21000.0\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# 3) with default parameters\n",
     "\n",
-    "def simpleInterest( p, n, r = 7.0):\n",
+    "def simpleInterest(p, n, r = 7.0):\n",
     "    return p * n * r\n",
     "\n",
-    "print(simpleInterest( 1000, 3, 5.0))  #Valid\n",
-    "print(simpleInterest( 1000, 3))  #Still valid - takes the default argument of r = 7.0"
+    "print(simpleInterest(1000, 3, 5.0))  #Valid\n",
+    "print(simpleInterest(1000, 3))  #Still valid - takes the default argument of r = 7.0\n",
+    "\n",
+    "print(\"Why did the python programmer run into the pole ?\".split(\" \") == \"Why did the python programmer run into the pole ?\".split())"
    ]
   },
   {
