--- a/Day 2/Homework Discussion for Day 1.ipynb
+++ b/Day 2/Homework Discussion for Day 1.ipynb
@@ -406,7 +406,7 @@
     "print(arePrizesOk(10, 5, 5) == True)\n",
     "print(arePrizesOk(8, 6, 7) == False) \n",
     "#                   My bad... ^ should have been False, not True as it was in the \n",
-    "#                   Homework for Day 1 jupyter notebook\n"
+    "#                   Homework for Day 1 jupyter notebook"
    ]
   },
   {
@@ -472,12 +472,22 @@
     "def matchingTheString(pattern, test):\n",
     "    # just use 'pattern' and 'test' as if they already contain the string values that you need to work with\n",
     "    #put your code below this line ⇩\n",
+    "    \n",
+    "    # pattern = \"^code\"\n",
+    "    # test =    \"codesignal\"\n",
     "    if pattern[0]=='^' and pattern[1:] == test[0:len(pattern)-1]:\n",
     "        return True\n",
-    "    elif pattern[-1]=='$' and pattern[0:len(pattern)-1] == test[len(test)-len(pattern)+1:]:\n",
+    "    \n",
+    "    # pattern =        \"nal$\"\n",
+    "    # test    = \"codesignal\"\n",
+    "    #            0123456789 => len(test)    =   10\n",
+    "                            #  len(pattern)-1 = 3\n",
+    "    elif pattern[-1]=='$' and pattern[0:len(pattern)-1] == test[len(test)-(len(pattern)-1):]:\n",
     "        return True\n",
+    "    \n",
     "    elif pattern in test:\n",
     "        return True\n",
+    "    \n",
     "    else:\n",
     "        return False\n",
     "            \n",
