--- a/Day 13/More Plotting.ipynb
+++ b/Day 13/More Plotting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Let's do MatPlotLib properly this time!"
+    "# More Matplotlib Plotting functions"
    ]
   },
   {
