--- a/Day 14/Day 14 - Summary.ipynb
+++ b/Day 14/Day 14 - Summary.ipynb
@@ -102,7 +102,7 @@
     "plt.xlabel('Distance along x')\n",
     "plt.ylabel('Distance along y')\n",
     "plt.title('A hill and a valley')\n",
-    "plt.text(2,14,\"The arrows show the direction of the gradient\", fontsize=10)\n",
+    "plt.text(2,14,\"The arrows show the direction of the -ve gradient\", fontsize=10)\n",
     "plt.show()"
    ]
   },
@@ -152,6 +152,31 @@
     "plt.plot(x,1/(1+np.exp(-1*x)))\n",
     "plt.title(r\"Sigmoid Function: sigmoid$(t) = \\frac{1}{1+e^{-t}}$\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1j\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(0+1j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
