--- a/Day 11/Excel Features in NumPy.ipynb
+++ b/Day 11/Excel Features in NumPy.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,24 +102,24 @@
      "output_type": "stream",
      "text": [
       "Before rounding:\n",
-      " [[12.06544071 11.357109   16.41986226]\n",
-      " [12.95729909 15.33178946 15.33591147]\n",
-      " [15.15483045 12.82748635 16.48868613]]\n",
+      " [[14.064107   18.74328129 18.36974655]\n",
+      " [18.30207809 14.40506095 18.92964255]\n",
+      " [10.79038264 15.05428909 10.626205  ]]\n",
       "\n",
       "Nearest integer:\n",
-      " [[12. 11. 16.]\n",
-      " [13. 15. 15.]\n",
-      " [15. 13. 16.]]\n",
+      " [[14. 19. 18.]\n",
+      " [18. 14. 19.]\n",
+      " [11. 15. 11.]]\n",
       "\n",
       "3 decimal points:\n",
-      " [[12.065 11.357 16.42 ]\n",
-      " [12.957 15.332 15.336]\n",
-      " [15.155 12.827 16.489]]\n",
+      " [[14.064 18.743 18.37 ]\n",
+      " [18.302 14.405 18.93 ]\n",
+      " [10.79  15.054 10.626]]\n",
       "\n",
       "Nearest 10s:\n",
-      " [[10. 10. 20.]\n",
-      " [10. 20. 20.]\n",
-      " [20. 10. 20.]]\n"
+      " [[10. 20. 20.]\n",
+      " [20. 10. 20.]\n",
+      " [10. 20. 10.]]\n"
      ]
     }
    ],
@@ -361,21 +361,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[155 180 213 235]\n",
-      " [129 168 153 139]\n",
-      " [211 204 170 227]]\n"
+     "ename": "ValueError",
+     "evalue": "high is out of bounds for int32",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-dfdf36ca2ab6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdtypeex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1280000000000\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2560000000000\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'int32'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtypeex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.randint\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m_bounded_integers.pyx\u001b[0m in \u001b[0;36mnumpy.random._bounded_integers._rand_int32\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: high is out of bounds for int32"
      ]
     }
    ],
    "source": [
-    "dtypeex = np.random.randint(128,256,size=[3,4],dtype='int32')\n",
+    "dtypeex = np.random.randint(1280000000000,2560000000000,size=[3,4],dtype='int32')\n",
     "print(dtypeex)"
    ]
   },
@@ -386,35 +390,6 @@
     "The `dtype` is basically the data type. You may be wondering, if we are already using `int`, then what is the use of a data type?\n",
     "\n",
     "The thing is, numpy actually has a lot more data types (np.int, np.int32, np.int64, and long_int, etc.) which are more exact representations of int in the memory. This option enables us to choose this, but it is not used generally, unless we have a very low memory budget."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.1 Generate random integers of a fixed data type:\n",
-    "\n",
-    "`np.random.random_integers(low[, high, size])` => Same as the previous function except we can't choose the datatype, which is set to `np.int` by default.\n",
-    "\n",
-    "It is deprecated (i.e. no longer supported) in the latest version of numpy, which is why I get the warning below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abhigyan/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: This function is deprecated. Please call randint(0, 12 + 1) instead\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = np.random.random_integers(0,12,[3,4])"
    ]
   },
   {
@@ -475,17 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[39.19448391  4.3300741  34.00385909 22.10522948 87.64393126]\n",
-      " [48.8587886  40.8844031  85.4685101  29.37359622 73.94492133]]\n",
-      "[[81.33350253 93.5185062  34.39636715  4.29191106 80.50803482]\n",
-      " [72.59846534 14.87224422 29.31082992 82.40902121 78.25529668]]\n"
+      "[[35.8140817   9.35066066 99.31193129 81.20494099 62.52535237]\n",
+      " [96.37065222 54.40067763 84.64206007 97.49143316 44.10922889]]\n",
+      "[[35.48812899 39.02883729 16.86685309 47.470669   98.18362468 37.07027428]\n",
+      " [44.01588584 12.21943614 98.02316073 57.59505503 15.09863418 17.24708005]]\n"
      ]
     }
    ],
@@ -493,7 +468,7 @@
     "ubiquity = np.random.uniform(-10,100, [2,5])\n",
     "print(ubiquity)\n",
     "\n",
-    "ubiquity2 = 100*np.random.ranf([2,5])\n",
+    "ubiquity2 = 100*np.random.ranf([2,6])\n",
     "print(ubiquity2)"
    ]
   },
@@ -632,11 +607,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Procedural World Generation\n",
+    "\n",
+    "Creating a game environment based on random values."
+   ]
   }
  ],
  "metadata": {
