--- a/Day 09/More Matrix Operations.ipynb
+++ b/Day 09/More Matrix Operations.ipynb
@@ -30,6 +30,14 @@
       "[[1 5]\n",
       " [2 6]\n",
       " [3 7]\n",
+      " [4 8]]\n",
+      "[[1 5]\n",
+      " [2 6]\n",
+      " [3 7]\n",
+      " [4 8]]\n",
+      "[[1 5]\n",
+      " [2 6]\n",
+      " [3 7]\n",
       " [4 8]]\n"
      ]
     }
@@ -37,7 +45,11 @@
    "source": [
     "import numpy as np\n",
     "A = np.array([[1,2,3,4],[5,6,7,8]])\n",
-    "print(np.matrix.transpose(A))"
+    "print(np.matrix.transpose(A))\n",
+    "\n",
+    "print(A.transpose())\n",
+    "\n",
+    "print(A.T)"
    ]
   },
   {
@@ -60,12 +72,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[1. 0.]\n",
+      " [0. 1.]]\n",
       "[[0.08333333 0.1       ]\n",
       " [0.09090909 0.07692308]]\n"
      ]
     }
    ],
    "source": [
+    "print(np.eye(2))\n",
+    "\n",
     "A = np.array([[12,10],[11,13]])\n",
     "\n",
     "print(1/A)"
@@ -94,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,13 +137,17 @@
      "output_type": "stream",
      "text": [
       "[[ 0.2826087  -0.2173913 ]\n",
-      " [-0.23913043  0.26086957]]\n"
+      " [-0.23913043  0.26086957]]\n",
+      "[[ 1.00000000e+00  4.71844785e-16]\n",
+      " [-1.11022302e-16  1.00000000e+00]]\n"
      ]
     }
    ],
    "source": [
     "Ainv = np.linalg.inv(A)\n",
-    "print(Ainv)"
+    "print(Ainv)\n",
+    "\n",
+    "print(Ainv @ A)"
    ]
   },
   {
